<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:isScrollContainer="true"
    android:orientation="vertical"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/comp" />

        <RadioGroup
            android:id="@+id/complexityRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView2"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:paddingLeft="3dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="30dp"
                    android:layout_height="8dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/lite" />

                <RadioButton
                    android:id="@+id/complexity_radio_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="0"
                    android:layoutDirection="rtl"
                    android:paddingLeft="30dp"
                    android:text="@string/easy"
                    android:textAlignment="textStart" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:paddingLeft="3dp">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="30dp"
                    android:layout_height="8dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/medium" />

                <RadioButton
                    android:id="@+id/complexity_radio_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:paddingLeft="30dp"
                    android:text="@string/medium"
                    android:textAlignment="textStart" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:paddingLeft="3dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="30dp"
                    android:layout_height="8dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/strong" />

                <RadioButton
                    android:id="@+id/complexity_radio_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:paddingLeft="30dp"
                    android:text="@string/complicated"
                    android:textAlignment="textStart" />
            </LinearLayout>
        </RadioGroup>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/complexityRadioGroup"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/off_type" />

        <RadioGroup
            android:id="@+id/typeRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/plus" />

                <RadioButton
                    android:id="@+id/type_radio_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:paddingLeft="25dp"
                    android:text="@string/mat"
                    android:textAlignment="textStart" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/points" />

                <RadioButton
                    android:id="@+id/type_radio_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:paddingLeft="25dp"
                    android:text="@string/conn_elem"
                    android:textAlignment="textStart" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/points_and_plus" />

                <RadioButton
                    android:id="@+id/type_radio_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:paddingLeft="25dp"
                    android:text="@string/random"
                    android:textAlignment="textStart" />
            </LinearLayout>
        </RadioGroup>
    </RelativeLayout>
</ScrollView>